// Built-in base types for API calls. Primarily useful as return types.

syntax = "proto3";
option go_package = "google.golang.org/appengine/internal/base";

package appengine.base;

message StringProto {
  string value = 1;
}

message Integer32Proto {
  int32 value = 1;
}

message Integer64Proto {
  int64 value = 1;
}

message BoolProto {
  bool value = 1;
}

message DoubleProto {
  double value = 1;
}

message BytesProto {
  bytes value = 1 [ctype=CORD];
}

message VoidProto {
}
